[project]
name = "holidayfyi"
version = "0.1.0"
description = "Pure Python holiday engine — Easter dates, public holidays, nth weekday finder. Zero dependencies core."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "holiday",
    "easter",
    "calendar",
    "date",
    "public-holiday",
    "weekday",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
holidays = ["holidays>=0.40"]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["holidayfyi[holidays,api,cli,mcp]"]

[project.scripts]
holidayfyi = "holidayfyi.cli:app"

[project.entry-points."mcp.servers"]
holidayfyi = "holidayfyi.mcp_server:mcp"

[project.urls]
Homepage = "https://holidayfyi.com"
Documentation = "https://holidayfyi.com/developers/"
Repository = "https://github.com/fyipedia/holidayfyi"
Issues = "https://github.com/fyipedia/holidayfyi/issues"
Changelog = "https://github.com/fyipedia/holidayfyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holidayfyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022", "B008"]  # __all__ grouped by category; B008: typer uses function calls in defaults

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "holidays>=0.40",
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
